trunk/Archive2/65/f1c31492797dbf/output
main.cpp: In function 'int main()':
main.cpp:53:39: error: found ':' in nested-name-specifier, expected '::'
   int, void(int), unsigned char**, std:array<void(*)(), 35>, double[4][8]
                                       ^
